--- a/css/exampleMemoryGame.css
+++ b/css/exampleMemoryGame.css
@@ -1,20 +1,61 @@
+div#memoryGameBackground{
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    border: grey 5px solid;
+    /*margin: 0% 5% 5% 0%;*/
+}
+
 div#memory_board{
-    background:#CCC;
+    background:darkslategrey;
     border:#999 1px solid;
-    width:800px;
-    height:540px;
-    padding:24px;
-    margin:0px auto;
+    width:100%;
+    height:40em;
+    padding: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    /*padding:24px;*/
+    /*margin:0px auto;*/
 }
 div#memory_board > div{
-    background: url(tile_bg.jpg) no-repeat;
-    border:#000 1px solid;
-    width:71px;
-    height:71px;
-    float:left;
-    margin:10px;
-    padding:20px;
-    font-size:64px;
-    cursor:pointer;
-    text-align:center;
+    /*background: url(tile_bg.jpg) no-repeat;*/
+    /*border:#000 1px solid;*/
+    /*width:71px;*/
+    /*height:71px;*/
+    /*float:left;*/
+    /*margin:10px;*/
+    /*padding:20px;*/
+    /*font-size:64px;*/
+    /*cursor:pointer;*/
+    /*text-align:center;*/
+    height: 20%;
+    width: 20%;
+    margin: 2.5%;
+    float: left;
+    font-size: 3em;
+    text-align: center;
+    /*text-align-all: center;*/
+    border:darkorange 5px solid;
 }
+#gameControlDisplay{
+    text-align: center;
+    /*margin-top: 5%;*/
+    /*margin: 0px auto;*/
+    /*padding-left: auto;*/
+    /*padding-right: auto;*/
+}
+/*#gameControlDisplay>li{*/
+   /*align: center;*/
+/*}*/
+/*#totalClickDisplay{*/
+    /*background-color: lightblue;*/
+
+/*}*/
+/*.tile{*/
+    /*height: 20%;*/
+    /*width: 20%;*/
+    /*float: left;*/
+    /*font-size: 3em;*/
+    /*text-align: center;*/
+    /*border:#000 1px solid;*/
+/*}*/
